--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
                             </div>
                         </div>
                     -->
+                    <div class="update-card">
+                        <div class="up-card-logo">
+                            <img src="pages/casl-summary-assets/assets/Forte-dark-text.png" alt="Forte logo">
+                        </div>
+                        <div class="up-card-title">
+                            Building a Question Answering System Part 2: Document Retrieval
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://medium.com/casl-project/building-a-question-answering-system-part-2-document-retrieval-a84f57655d7e?source=friends_link&sk=be9b21a3fc97be77243ae70cd1b43dc6" target="_blank">Blog Post</a></div>
+                        </div>
+                    </div>              
                    <div class="update-card">
                         <div class="up-card-logo">
                             <img src="pages/casl-summary-assets/assets/tuun.png" alt="Tuun logo">
