update index.html: add mbzuai logo to partners, update cmu logo, update spacing

--- a/index.html
+++ b/index.html
@@ -302,12 +302,16 @@
                         <h2>Partners</h2>
                         <div>
                             <a href="https://petuum.com">
-                                <img src="assets/img/petuum.svg" alt="Petuum, Inc. logo" title="Petuum">
+                                <img src="assets/img/petuum.svg" alt="Petuum, Inc. logo"
+                                title="Petuum" height=44px>
                             </a>
-                        </div>
-                        <div>
                             <a href="https://www.cmu.edu">
-                                <img src="assets/img/cmu.svg" alt="Carnegie Mellon University">
+                                <img src="assets/img/cmu.png" alt="Carnegie Mellon
+                                University" height=50px>
+                            </a>
+                            <a href="https://mbzuai.ac.ae/">
+                                <img src="assets/img/mbzuai.png" alt="Mohamed bin Zayed
+                                University of Artificial Intelligence" height=55px>
                             </a>
                         </div>
                     </section>
