--- a/index.html
+++ b/index.html
@@ -157,6 +157,19 @@
                         <div class="up-card-subtitle">
                         </div>
                         <div class="up-card-footer">
+                            <div><a href="https://medium.com/casl-project/building-a-question-answering-system-part-3-answer-extraction-5b9a4bd31e18?source=friends_link&sk=2a37f47ddaf7e7010995f87a55168342" target="_blank">Blog Post</a></div>
+                        </div>
+                    </div>              
+                    <div class="update-card">
+                        <div class="up-card-logo">
+                            <img src="assets/updates/forte-dark-text.png" alt="Forte logo">
+                        </div>
+                        <div class="up-card-title">
+                            Building a Question Answering System Part 2: Document Retrieval
+                        </div>
+                        <div class="up-card-subtitle">
+                        </div>
+                        <div class="up-card-footer">
                             <div><a href="https://medium.com/casl-project/building-a-question-answering-system-part-2-document-retrieval-a84f57655d7e?source=friends_link&sk=be9b21a3fc97be77243ae70cd1b43dc6" target="_blank">Blog Post</a></div>
                         </div>
                     </div>              
