Update Blog Post Title - Part 3: Answer Extraction

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <img src="assets/updates/forte-dark-text.png" alt="Forte logo">
                         </div>
                         <div class="up-card-title">
-                            Building a Question Answering System Part 2: Document Retrieval
+                            Building a Question Answering System Part 3: Answer Extraction
                         </div>
                         <div class="up-card-subtitle">
                         </div>
