update casl-oss with alpa card, add alpa logo

--- a/pages/casl-oss.html
+++ b/pages/casl-oss.html
@@ -237,6 +237,74 @@
                         </div>
                     </div>
                     </div>
+
+                    <div class="col-lg-3">
+                    <div class="threecard">
+                        <div class="logo-group">
+                        <img
+                            class="img-circle"
+                            src="casl-summary-assets/assets/alpa-text.png"
+                            alt="alpa"
+                            height="43"
+                        />
+                        </div>
+
+                        <div class="short-description">
+                            <p>Auto parallelization for large-scale neural networks</p>
+                        </div>
+
+                        <h2 class="card-button">
+                        <a href="#">
+                            Alpa: About
+                        </a>
+                        <div class="card-description">
+                            <span class="card-desc-close">&times;</span>
+                            Alpa is a system for large-scale distributed training. Alpa is specifically designed for training giant neural networks that cannot fit into a single device.
+                        </div>
+                        </h2>
+
+                        <div class="marketing-buttons">
+                        <p>
+                            <a
+                            class="btn btn-default"
+                            href="https://github.com/alpa-projects/alpa"
+                            role="button"
+                            target="_blank"
+                            >
+                            <img
+                                src="casl-summary-assets/assets/GitHub-Mark-32px.png"
+                            />Github &raquo;</a
+                            >
+                            <a
+                            class="btn btn-default"
+                            href="https://alpa-projects.github.io/"
+                            role="button"
+                            ><img
+                                src="casl-summary-assets/assets/document-icon.png"
+                            />Docs &raquo;</a
+                            >
+                        </p>
+                        <p>
+                            <a
+                            class="btn btn-default"
+                            href="https://alpa-projects.github.io/tutorials/"
+                            role="button"
+                            ><img
+                                src="casl-summary-assets/assets/example-icon.png"
+                            />Examples &raquo;</a
+                            >
+                            <a
+                            class="btn btn-default"
+                            href="https://alpa-projects.github.io/developer/developer_guide.html"
+                            role="button"
+                            ><img
+                                src="casl-summary-assets/assets/teacher-icon.png"
+                            />Tutorials &raquo;</a
+                            >
+                        </p>
+                        </div>
+                    </div>
+                    </div>
             
                 </div>
             
