update homepage with reorder, section titles, logos

--- a/index.html
+++ b/index.html
@@ -73,8 +73,15 @@
                     <a class="button" href="pages/casl-summary.html">Learn more</a>
                 </div>
             </section>
+            <section id="projects">
+                <h1>Projects</h1>
+                <div class="oss-container">
+                    <iframe src="pages/casl-oss.html" title="CASL Open Source Projects"></iframe>
+                </div>
+            </section>
             <section id="examples">
-                <h2>Examples</h2>
+                <br/><br/><br/><br/>
+                <h1>Examples</h1>
                 <div class="hexagon-row">
                     <div class="hexagon"></div>
                     <div class="hexagon"></div>
@@ -118,13 +125,10 @@
                     <div class="hexagon"></div>
                     
                 </div>
-                <div class="oss-container">
-                    <iframe src="pages/casl-oss.html" title="CASL Open Source Projects"></iframe>
-                </div>
             </section>
             <section id="updates" class="main-container">
-                <h2>CASL Updates</h2>
-                <h3>Latest updates and news about CASL</h3>
+                <h1>CASL Updates</h1>
+                <h3><center>Latest updates and news about CASL</center></h3>
                 <div class="updates-container">
                     <!-- Example Markup (can vary) -->
                     <!--
@@ -312,7 +316,7 @@
             <div class="footer">
                 <div class="flex-row main-container">
                     <section id="partners" class="main-container">
-                        <h2>Partners</h2>
+                        <h1>Partners</h1>
                         <div>
                             <a href="https://petuum.com">
                                 <img src="assets/img/petuum.svg" alt="Petuum, Inc. logo"
@@ -326,6 +330,14 @@
                                 <img src="assets/img/mbzuai.png" alt="Mohamed bin Zayed
                                 University of Artificial Intelligence" height=55px>
                             </a>
+                            <a href="https://www.stanford.edu/">
+                                <img src="assets/img/stanford.png" alt="Stanford
+                                University" height=38px>
+                            </a>
+                            <a href="https://www.berkeley.edu/">
+                                <img src="assets/img/berkeley.png" alt="UC Berkeley"
+                                                                   height=55px>
+                            </a>
                         </div>
                     </section>
                     <!-- Contact info TBD <section id="contact" class="main-container">
@@ -338,7 +350,7 @@
                 </div>
             </div>
             <section id="research" class="main-container">
-                <h2>Research and Technology</h2>
+                <h1>Research and Technology</h1>
                 <br/>
                 <div class="updates-container">
                     <div class="update-card">
