fix target _blank issue, update meta project list

--- a/pages/casl-oss.html
+++ b/pages/casl-oss.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="CASL Projects Summary -  for machine learning in the real world. Open source projects making up CASL include AdaptDL, AutoDist, Tuun, Texar, Texar-PyTorch, Forte, Stave. Partners include Petuum, Inc. and Carnegie Mellon University.">
+        <meta name="description" content="CASL Projects Summary -  for machine learning
+        in the real world. Open source projects making up CASL include AdaptDL,
+        AutoDist, Tuun, Texar, Texar-PyTorch, Forte, Stave, Alpa. Partners include Petuum, Inc. and Carnegie Mellon University.">
 
         <!-- casl-summary specific assets -->
         <link href="casl-summary-assets/css/bootstrap.css" rel="stylesheet" />
@@ -211,6 +213,7 @@
                             class="btn btn-default"
                             href="#"
                             role="button"
+                            target="_blank"
                             ><img
                                 src="casl-summary-assets/assets/document-icon.png"
                             />Docs &raquo;</a
@@ -221,6 +224,7 @@
                             class="btn btn-default"
                             href="#"
                             role="button"
+                            target="_blank"
                             ><img
                                 src="casl-summary-assets/assets/example-icon.png"
                             />Examples &raquo;</a
@@ -229,6 +233,7 @@
                             class="btn btn-default"
                             href="#"
                             role="button"
+                            target="_blank"
                             ><img
                                 src="casl-summary-assets/assets/teacher-icon.png"
                             />Tutorials &raquo;</a
@@ -279,6 +284,7 @@
                             class="btn btn-default"
                             href="https://alpa-projects.github.io/"
                             role="button"
+                            target="_blank"
                             ><img
                                 src="casl-summary-assets/assets/document-icon.png"
                             />Docs &raquo;</a
@@ -289,6 +295,7 @@
                             class="btn btn-default"
                             href="https://alpa-projects.github.io/tutorials/"
                             role="button"
+                            target="_blank"
                             ><img
                                 src="casl-summary-assets/assets/example-icon.png"
                             />Examples &raquo;</a
@@ -297,6 +304,7 @@
                             class="btn btn-default"
                             href="https://alpa-projects.github.io/developer/developer_guide.html"
                             role="button"
+                            target="_blank"
                             ><img
                                 src="casl-summary-assets/assets/teacher-icon.png"
                             />Tutorials &raquo;</a
