update tuun links to docs, examples, tutorial

--- a/pages/casl-oss.html
+++ b/pages/casl-oss.html
@@ -211,7 +211,7 @@
                             >
                             <a
                             class="btn btn-default"
-                            href="#"
+                            href="https://petuum.github.io/tuun/"
                             role="button"
                             target="_blank"
                             ><img
@@ -222,7 +222,7 @@
                         <p>
                             <a
                             class="btn btn-default"
-                            href="#"
+                            href="https://github.com/petuum/tuun/tree/master/examples"
                             role="button"
                             target="_blank"
                             ><img
@@ -231,7 +231,7 @@
                             >
                             <a
                             class="btn btn-default"
-                            href="#"
+                            href="https://petuum.github.io/tuun/quick_start.html"
                             role="button"
                             target="_blank"
                             ><img
