update meta description in index, casl-oss

--- a/pages/casl-oss.html
+++ b/pages/casl-oss.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="CASL Projects Summary -  for machine learning
-        in the real world. Open source projects making up CASL include AdaptDL,
-        AutoDist, Tuun, Texar, Texar-PyTorch, Forte, Stave, Alpa. Partners include Petuum, Inc. and Carnegie Mellon University.">
+        <meta name="description" content="CASL is for machine learning in the real world. Open source projects making up CASL include AdaptDL, AutoDist, Tuun, Texar, Texar-PyTorch, Forte, Stave, Alpa. Partners include Petuum, Carnegie Mellon, MBZUAI, Stanford, and Berkeley.">
 
         <!-- casl-summary specific assets -->
         <link href="casl-summary-assets/css/bootstrap.css" rel="stylesheet" />
