--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="CASL is for machine learning in the real world. Composable ML to quickly assemble applications, Auto ML to automatically tune models, and Scalable ML to efficiently train large models. Partners include Petuum, Inc. and Carnegie Mellon University.">
+        <meta name="description" content="CASL is for machine learning in the real world. Composable ML to quickly assemble applications, Auto ML to automatically tune models, and Scalable ML to efficiently train large models. Partners include Petuum, Carnegie Mellon, MBZUAI, Stanford, and Berkeley.">
         <link rel="stylesheet" href="assets/css/normalize.css?v2.7">
         <link rel="stylesheet" href="assets/css/index.css?v2.7">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,800">
