add alpa paper to index, add osdi22 logo

--- a/index.html
+++ b/index.html
@@ -355,6 +355,20 @@
                 <div class="updates-container">
                     <div class="update-card">
                         <div class="up-card-logo">
+                            <img src="assets/updates/osdi-22-logo.png" alt="USENIX Symposium on Operating Systems Design and Implementation (OSDI) logo">
+                        </div>
+                        <div class="up-card-title">
+                            OSDI 2022
+                        </div>
+                        <div class="up-card-subtitle">
+                            Alpa: Automating Inter- and Intra-Operator Parallelism for Distributed Deep Learning
+                        </div>
+                        <div class="up-card-footer">
+                            <div><a href="https://arxiv.org/pdf/2201.12023.pdf" target="_blank">Full Paper</a></div>
+                        </div>
+                    </div>
+                    <div class="update-card">
+                        <div class="up-card-logo">
                             <img src="assets/updates/aaai_logo.png" alt="Association for the Advancement of Artificial Intelligence (AAAI) logo">
                         </div>
                         <div class="up-card-title">
