add betty card to casl-oss page

--- a/pages/casl-oss.html
+++ b/pages/casl-oss.html
@@ -644,6 +644,89 @@
                     </div>
                 </div>
                 <!-- /.row -->
+
+                <!-- Third Row -->
+                <div class="row">
+
+                    <div class="col-lg-3">
+                    <div class="threecard">
+                        <div class="logo-group">
+                        <img
+                            class="img-circle"
+                            src="casl-summary-assets/assets/betty-text.svg"
+                            alt="betty"
+                            height="43"
+                        />
+                        </div>
+
+                        <div class="short-description">
+                            <p>An automatic differentiation library for generalized
+                            meta-learning and multilevel optimization</p>
+                        </div>
+
+                        <h2 class="card-button">
+                        <a href="#">
+                            Betty: About
+                        </a>
+                        <div class="card-description">
+                            <span class="card-desc-close">&times;</span>
+                            Betty is a PyTorch library for generalized-meta learning
+                            (GML) and multilevel optimization (MLO) that provides a
+                            unified programming interface for a number of GML/MLO
+                            applications including meta-learning, hyperparameter
+                            optimization, neural architecture search, data reweighting,
+                            adversarial learning, and reinforcement learning.
+                        </div>
+                        </h2>
+
+                        <div class="marketing-buttons">
+                        <p>
+                            <a
+                            class="btn btn-default"
+                            href="https://github.com/leopard-ai/betty"
+                            role="button"
+                            target="_blank"
+                            >
+                            <img
+                                src="casl-summary-assets/assets/GitHub-Mark-32px.png"
+                            />Github &raquo;</a
+                            >
+                            <a
+                            class="btn btn-default"
+                            href="https://leopard-ai.github.io/betty/"
+                            role="button"
+                            target="_blank"
+                            ><img
+                                src="casl-summary-assets/assets/document-icon.png"
+                            />Docs &raquo;</a
+                            >
+                        </p>
+                        <p>
+                            <a
+                            class="btn btn-default"
+                            href="https://github.com/leopard-ai/betty/tree/main/examples"
+                            role="button"
+                            target="_blank"
+                            ><img
+                                src="casl-summary-assets/assets/example-icon.png"
+                            />Examples &raquo;</a
+                            >
+                            <a
+                            class="btn btn-default"
+                            href="https://leopard-ai.github.io/betty/tutorial/basic/basic.html"
+                            role="button"
+                            target="_blank"
+                            ><img
+                                src="casl-summary-assets/assets/teacher-icon.png"
+                            />Tutorials &raquo;</a
+                            >
+                        </p>
+                        </div>
+                    </div>
+                    </div>
+
+                </div>
+                <!-- /.row -->
             
             </div>
         </main>
